// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link activeClassName? 1`] = `
"<LinkComponent
  activeClassName=\\"activeCx\\"
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</LinkComponent>"
`;

exports[`Link activeClassName? 2`] = `
"<LinkComponent
  activeClassName=\\"activeCx\\"
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</LinkComponent>"
`;

exports[`Link activeStyle? 1`] = `
"<LinkComponent
  activeStyle={{
    color: 'blue'
  }}
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</LinkComponent>"
`;

exports[`Link activeStyle? 2`] = `
"<LinkComponent
  activeStyle={{
    color: 'blue'
  }}
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</LinkComponent>"
`;

exports[`Link works with \`\`href\`\` 1`] = `
"<LinkComponent
  href=\\"/b\\"
  to=\\"/b\\"
>
  c
</LinkComponent>"
`;

exports[`Link works with \`\`to\`\` 1`] = `
"<LinkComponent to=\\"/b\\">
  c
</LinkComponent>"
`;

exports[`Link works with external \`\`href\`\` 1`] = `
"<LinkComponent
  href=\\"http://b.com\\"
  to=\\"http://b.com\\"
>
  c
</LinkComponent>"
`;

exports[`Link works with external \`\`href\`\` 2`] = `
"<LinkComponent
  href=\\"http://b.com\\"
  to=\\"http://b.com\\"
>
  c
</LinkComponent>"
`;

exports[`Link works with internal \`\`href\`\` 1`] = `
"<LinkComponent
  href=\\"test://url.tld/internal\\"
  to=\\"test://url.tld/internal\\"
>
  c
</LinkComponent>"
`;

exports[`Link works with internal \`\`href\`\` 2`] = `
"<LinkComponent
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</LinkComponent>"
`;
